# ps2dq5-sim

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
assets/: encount_table.csv  monsters.csv
examples/: simulate_encount.rs
src/: encount.rs  lib.rs  monster.rs
